[gd_scene load_steps=5 format=3 uid="uid://g3half8qtsa"]

[ext_resource type="Script" uid="uid://cagls3xcdvut3" path="res://ui/menu.gd" id="1_4c782"]
[ext_resource type="Script" uid="uid://camn067plnl2x" path="res://ui/input_settings.gd" id="1_bwjgb"]
[ext_resource type="PackedScene" uid="uid://bu75qpwk3isq6" path="res://ui/input_button.tscn" id="2_udkah"]
[ext_resource type="Theme" uid="uid://cn38knnhoa4y8" path="res://ui/menu_theme.tres" id="4_7toyc"]

[node name="menu" type="CanvasLayer"]
script = ExtResource("1_4c782")

[node name="MenuDivider" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("4_7toyc")

[node name="TitleScreen" type="VBoxContainer" parent="MenuDivider"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="MenuDivider/TitleScreen"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Raid The Abyss!"

[node name="GameControls" type="HBoxContainer" parent="MenuDivider/TitleScreen"]
layout_mode = 2

[node name="Resume" type="Button" parent="MenuDivider/TitleScreen/GameControls"]
visible = false
self_modulate = Color(0.752595, 0.934879, 0.95493, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Resume
."

[node name="Start" type="Button" parent="MenuDivider/TitleScreen/GameControls"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "New
Game"

[node name="Quit" type="Button" parent="MenuDivider/TitleScreen/GameControls"]
layout_mode = 2
size_flags_horizontal = 0
text = "Quit
."

[node name="Reset" type="Button" parent="MenuDivider/TitleScreen/GameControls"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Reset
Ctrls"

[node name="ControlContainer" type="HBoxContainer" parent="MenuDivider/TitleScreen"]
layout_mode = 2

[node name="Controls" type="VBoxContainer" parent="MenuDivider/TitleScreen/ControlContainer"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ControlsLabel" type="Label" parent="MenuDivider/TitleScreen/ControlContainer/Controls"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Controls (left click to rebind):"
vertical_alignment = 1

[node name="ActionList" type="VBoxContainer" parent="MenuDivider/TitleScreen/ControlContainer/Controls"]
layout_mode = 2
size_flags_horizontal = 4
script = ExtResource("1_bwjgb")

[node name="InputButton" parent="MenuDivider/TitleScreen/ControlContainer/Controls/ActionList" instance=ExtResource("2_udkah")]
layout_mode = 2
size_flags_vertical = 3

[node name="VSeparator" type="VSeparator" parent="MenuDivider/TitleScreen/ControlContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="MainOptions" type="VBoxContainer" parent="MenuDivider/TitleScreen"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10

[node name="SoundContainer" type="HBoxContainer" parent="MenuDivider/TitleScreen/MainOptions"]
layout_mode = 2
size_flags_vertical = 8

[node name="SoundLabel" type="Label" parent="MenuDivider/TitleScreen/MainOptions/SoundContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Sound Vol:"

[node name="SFXVolume" type="HSlider" parent="MenuDivider/TitleScreen/MainOptions/SoundContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
min_value = -80.0
max_value = 0.0
value = -10.0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuDivider"]
layout_mode = 2
size_flags_vertical = 8

[node name="Credits" type="Label" parent="MenuDivider/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8
theme_override_font_sizes/font_size = 18
text = "For Ludum Dare 57
Design: Emery Smith , 
staticleapstudios.com
SFX and Music:  SmthngClvr ,
 https://youtube.com/@smthngclvr?feature=shared"
horizontal_alignment = 2

[node name="MusicContainer" type="HBoxContainer" parent="MenuDivider/VBoxContainer"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="MenuDivider/VBoxContainer/MusicContainer"]
layout_mode = 2
text = "Music Vol:"

[node name="MusicVolume" type="HSlider" parent="MenuDivider/VBoxContainer/MusicContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 3
min_value = -80.0
max_value = 0.0
value = -10.0

[connection signal="pressed" from="MenuDivider/TitleScreen/GameControls/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MenuDivider/TitleScreen/GameControls/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MenuDivider/TitleScreen/GameControls/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="MenuDivider/TitleScreen/GameControls/Reset" to="MenuDivider/TitleScreen/ControlContainer/Controls/ActionList" method="_on_reset_button_pressed"]
[connection signal="value_changed" from="MenuDivider/TitleScreen/MainOptions/SoundContainer/SFXVolume" to="." method="_on_sfx_volume_value_changed"]
[connection signal="value_changed" from="MenuDivider/VBoxContainer/MusicContainer/MusicVolume" to="." method="_on_music_volume_value_changed"]
